# agent-os

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt
docs/: DESIGN.md  ROADMAP.md
src/agent_os/: __init__.py  cli.py
src/agent_os/api/: __init__.py  routes.py  server.py  websocket.py
src/agent_os/core/: __init__.py  audit.py  capabilities.py  memory.py  messaging.py  models.py  sandbox.py
src/agent_os/runtime/: __init__.py  engine.py
src/agent_os/tools/: __init__.py  file.py  http.py  registry.py  shell.py
tests/: test_phase2.py  test_phase3.py  test_phase4.py
